src/assets/styles/scss/components/select/_select.scss
.select {
  position: relative;
  @include flexBox($direction:column, $justify: center, $align:center, $wrap:nowrap);

  @media screen and (max-width: 1060px)  {
    width: 100%;
    padding: 30px 0 10px 0;
    border-top: 1px solid $border1;
    @include flexBox($direction:row, $justify:space-between, $align:flex-end, $wrap:nowrap);
    box-shadow: -9px 8px 20px 0px rgba(0, 0, 0, 0.05);
  }
  
  &__btn {
    width: 215px;
    border-radius: 10px;
    border: solid 1px $border1;
    padding: 10px 10px 10px 35px;
    cursor: pointer;
    @include flexBox($direction:false, $justify: space-between, $align:center, $wrap:nowrap);

    @media screen and (max-width: 1060px)  {
      border: 0;
      padding: 0;
    }

    &__desc {
      & p:first-child {
        font-size: 17px;
        font-weight: bold;
        line-height: 1.35;
        color: $text;
      }

      & p:last-child {
        color: $dark-sky-blue;
        font-size: 15px;
        font-weight: bold;

        @media screen and (max-width: 1060px)  {
          color: $text;
        }
      }
    }

    &__icon {
      width: 40px;
      @include flexBox($direction:false, $justify: center, $align:center, $wrap:nowrap);

      @media screen and (max-width: 1060px)  {
        display: none;
      }

      img {
        width: 12px;
        transition: all .3s ease;
      }
    }
  }

  &__valid-date {
    font-size: 13px;
    line-height: 1.46;
    color: $text2;
    margin-top: 6px;
  }

  &__list {
    @extend .select__btn;
    display: none;
    background-color: $white;
    position: absolute;
    top: 72px;

    &__link {
      display: inline-block;
      color: $text;
      padding:20px 0;
    }

    &__item:not(:last-child) {
      border-bottom: solid 1px $border1;
    }
  }

  &--visible .select__btn__icon img {
    transform: rotate(180deg);
  }

  &--visible .select__list {
    display: block;
  }
}

